--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,85 +1,428 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-	
+ <title>Menu avec logo</title>
+
 </head>
-<body> 
-  
-	<div class="circle">
-        <img src="./1. banane.png" alt="Image 1" />
-        <img src="./assest-01.png" alt="Image 3" />
-        <img src="./assest-02.png" alt="Image 3" />
-        <img src="./assest-03.png" alt="Image 3" />
-        
-        
 
-	</div>
+<body>
+  <img id="panier" src="tp-panier.png" alt="Panier" />
+ 
+<div id="menu">
+<div id="menu2">
+  <img id="logo" src="logo.png" alt="Logo" />
 
-   
-</body>
-	
 
-	<script>
-		 var images = [
-    "https://images.pexels.com/photos/15286/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
-    "https://images.pexels.com/photos/1001682/pexels-photo-1001682.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1",
-    "https://images.pexels.com/photos/1085757/pexels-photo-1085757.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
-  ];
-  var currentIndex = 0;
+  <ul>
+   <li><a href="#">Accueil</a></li>
+   <li><a href="#">Concept</a></li>
+   <li><a href="#" onmouseover="this.style.fontWeight='bold'" onmouseout="this.style.fontWeight='normal'">Créations</a></li>
+   <li><a href="#">A venir</a></li>
+   <li><a href="#">Contact</a></li>
+   </ul>
 
-  // Récupérez toutes les images dans un tableau
-  var allImages = document.querySelectorAll(".circle img");
+  </div>
 
-  // Ajoutez un événement de clic à chaque image
-  allImages.forEach(function(img, index) {
-    img.addEventListener("click", function() {
-      // Créez une fenêtre modale et ajoutez l'image en taille réelle
-      var modal = document.createElement("div");
-      modal.classList.add("modal");
-      var img = document.createElement("img");
-      img.src = images[index];
-      modal.appendChild(img);
-      document.body.appendChild(modal);
+</div>
+ 
+ <button id="btn">étoile</button>
+ <button id="btn2"><img src="./1. banane.png" alt="banane" /> Fruit </button>
+ <button id="btn3" onclick="changeBackgroundColor()">Changer la couleur de fond</button>
+ <button id="btn4">rond</button>
+ <div class="rectangle">
+ <img src="./assest-01.png" id="croix" alt="Image 3" />
+ <img src="./assest-01.png" id="croix2" alt="Image 3" />
+ <img src="./1. banane.png" id="blod" alt="banane" />
+ <img src="./assest-02.png" id="cercle" alt="Image 2" />
+ <img src="./assest-02.png" id="cercle2" alt="Image 2" />
+ </div>
+ <script>
 
-      // Ajoutez un événement de clic à la fenêtre modale pour la fermer
-      modal.addEventListener("click", function() {
-        modal.remove();
-      });
-    });
-  });
-	
-	</script>
+// Bouton fruit
+
+var banane= [
+ './2. avocat.png',
+ './3. orange.png',
+ './4. fraise.png',
+
+];
+
+// sélectionner le bouton et l'image
+
+var btn2 = document.getElementById('btn2');
+var blod = document.getElementById('blod');
+
+// ajouter un événement de clic au bouton
+
+btn2.addEventListener('click', function() {
+
+// générer un index aléatoire
+
+var index = Math.floor(Math.random() * banane.length);
+
+// changer la source de l'image
+
+
+
+
+ blod.src = banane[index];
+
+});
+
+// Bouton étoiles
+
+var etoile1= [
+ 'assest-01.png',
+
+];
+
+// sélectionner le bouton et l'image, code des croix
+
+var btn = document.getElementById('btn');
+var croix = document.getElementById('croix');
+
+// ajouter un événement de clic au bouton
+
+btn.addEventListener('click', function() {
+
+// générer un index aléatoire
+
+ var index = Math.floor(Math.random() * etoile1.length);
+
+// changer la source de l'image
+
+ croix.style.top = getRandomPercentage();
+ croix.style.left = getRandomPercentage();
+ croix.src = etoile1[index];
+});
+
+// sélectionner le bouton et l'image, code des croix2
+
+var btn = document.getElementById('btn');
+var croix2 = document.getElementById('croix2');
+
+// ajouter un événement de clic au bouton
+
+btn.addEventListener('click', function() {
+
+// générer un index aléatoire
+
+var index = Math.floor(Math.random() * etoile1.length);
+
+// changer la source de l'image
+
+croix2.style.top = getRandomPercentage();
+croix2.style.left = getRandomPercentage();
+croix2.src = etoile1[index];
+
+});
+
+function getRandomPercentage() {
+return Math.floor(Math.random() * 91) + "%";
+}
+
+// Bouton cercle
+var rond= [
+'assest-02.png',
+];
+
+// sélectionner le bouton et l'image, code des cercles
+
+var btn4 = document.getElementById('btn4');
+var cercle = document.getElementById('cercle');
+
+// ajouter un événement de clic au bouton
+
+btn4.addEventListener('click', function() {
+
+// générer un index aléatoire
+
+var index = Math.floor(Math.random() * rond.length);
+
+// changer la source de l'image
+
+cercle.style.top = getRandomPercentage();
+cercle.style.left = getRandomPercentage();
+cercle.src = rond[index];
+});
+
+function getRandomPercentage() {
+
+  return Math.floor(Math.random() * 91) + "%";
+
+}
+
+// sélectionner le bouton et l'image, code des cercle2
+
+var btn4 = document.getElementById('btn4');
+
+var cercle2 = document.getElementById('cercle2');
+
+
+// ajouter un événement de clic au bouton
+
+btn4.addEventListener('click', function() {
+
+// générer un index aléatoire
+
+
+var index = Math.floor(Math.random() * rond.length);
+
+// changer la source de l'image
+cercle2.style.top = getRandomPercentage();
+cercle2.style.left = getRandomPercentage();
+cercle2.src = rond[index];
+});
+
+function getRandomPercentage() {
+return Math.floor(Math.random() * 91) + "%";
+
+} 
+
+//Changement couleur du fond
+
+function changeBackgroundColor(){
+      // Palette de couleurs pastel claires
+      var palette = ['#ffe5b4', '#f0e8dc', '#d8bfd8', '#add8e6', '#e0ffff', '#f0fff0', '#faf0e6'];
+      // Sélection aléatoire d'une couleur de la palette
+      var randomIndex = Math.floor(Math.random() * palette.length);
+      var randomColor = palette[randomIndex];
+      // Définition de la couleur de fond
+      document.querySelector(".rectangle").style.backgroundColor = randomColor;
+
+};
+
+</script>
 
 <style>
-    .circle {
-border-radius: 50%;
-overflow: hidden;
-width: 100px;
-height: 100px;
-background-color: red;
-}
-    .circle img {
-display: flex;
-margin: 0 auto;
-max-width: 100%;
-max-height: 100%;
+
+.rectangle {
+  width: 500px;
+  height: 700px;
+  background-color: #eee;
+  border: 1px solid #f70101;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.circle {
-  position: relative;
-  width: 100px;
-  height: 100px;
+.rectangle img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.circle img {
+
+.rectangle{
+  position: relative;  
+  width: 500px;
+  height: 700px;
+}
+
+.rectangle img{
   position: absolute;
-  top: 0;
+  top: 0;  
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-
 }
+
+.rectangle {
+  position: relative;  
+  width: 500px;
+  height: 700px; 
+  background-color: #eee;
+  border: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.rectangle img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  max-height: 100%;
+  pointer-events: none;
+}
+
+#croix {
+  transform: translate(-50%, -50%);  
+  width: 150px;  
+  height: 150px; 
+  top: 30%;
+  left: 60%;
+  z-index: 0;
+}
+
+#croix2 {
+  transform: translate(-50%, -50%); 
+  width: 200px;  
+  height: 200px; 
+  top: 30%;
+  left: 60%;
+  z-index: 0;
+}
+
+#cercle {
+transform: translate(-50%, -50%);
+width: 150px;
+height: 150px;
+top: 30%;
+left: 50%;
+z-index: 0;
+}
+
+
+
+
+#cercle2 {
+transform: translate(-50%, -50%);
+width: 150px;
+height: 150px;
+top: 30%;
+left: 75%;
+z-index: 0;
+}
+
+
+#btn2 {
+  background-color: #f0e8dc;
+  border: none;
+  color: #333;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+
+
+
+#btn2:hover {
+  background-color: #d8bfd8;
+}
+
+
+
+
+#btn2 img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+/* Style général du menu */
+#barre {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #ffffff;
+      color: #000000;
+      padding: 60px;
+      font-family: 'Calibri', sans-serif;
+}
+
+
+
+
+#menu2 ul li:hover a b {
+      font-weight: bold;
+}
+
+
+
+
+
+#menu2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+
+
+
+     /* Style du logo */
+
+    #logo {
+      width: 180px;
+       height: 180px;
+      margin-right: 10px;
+    }
+
+    #panier {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: 60px;
+       height: 60px;
+      margin-right: 10px;
+    }
+
+
+
+     /* Style des liens du menu */
+
+     #menu ul {
+
+       display: flex;
+       list-style: none;
+       margin: 0;
+       padding: 0;
+     }
+
+     #menu li {
+       margin-right: 10px;
+     }
+
+
+
+
+   #menu a {
+
+      color: #000000;
+      text-decoration: none;
+       padding: 12px;
+
+     }
+
+  /* Style du bouton */
+
+     #menu button {
+     background-color: #000000;
+     color: #333;
+    border: none;
+     padding: 5px 10px;
+     cursor: pointer;
+
+ }
+
 </style>
+
+
+
+
 </body>
+
+
+
+
 </html>
+
+
+
+
+
