--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+  <button class="Screenshot">scrennshot</button>
+
+
+
+
+
   <img id="panier" src="tp-panier.png" alt="Panier" />
  
 <div id="menu">
@@ -194,6 +200,7 @@ function changeBackgroundColor(){
 };
 
 </script>
+
 
 <style>
 
@@ -411,6 +418,40 @@ z-index: 0;
  }
 
 </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script>
+  function Screenx(){
+  console.log("pokemon")
+  var canvasPromise = html2canvas(document.body, {
+    useCORS: true
+  })
+canvasPromise.then((canvas)=>{
+console.log(canvas)
+document.body.appendChild(canvas)
+
+var dataURL=canvas.toDataURL("image/png");
+console.log (dataURL)
+
+var img= new Image();
+img.src = dataURL;
+img.download = dataURL;
+
+var a = document.createElement("a");
+a.innerHTML = "DOWNLOAD ton image";
+a.target = "_blank";
+a.href = img.src;
+a.download = img.download;
+
+document.body.appendChild(a)
+
+a.click()
+})
+
+
+} 
+document.querySelector(".Screenshot").addEventListener("click",Screenx);
+</script>
 
 
 
